<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/ic_frame_2"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
    //21-4-2022,Arif Abdan Syakur,10119085,IF-3
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_registrasi"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:fontFamily="@font/poppins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#FAAB05"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/poppins"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:minHeight="45dp"
        android:textColor="@color/white"
        android:backgroundTint="#FAAB05"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#FAAB05"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:password="true"
        android:minHeight="45dp"
        android:textColor="@color/white"
        android:backgroundTint="#FAAB05"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#FAAB05"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:password="true"
        android:minHeight="45dp"
        android:textColor="@color/white"
        android:backgroundTint="#FAAB05"/>


    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FAAB05"
        android:text="@string/register1"
        android:onClick="Pindah"
        android:textColor="@color/white"
        tools:ignore="OnClick"
        android:fontFamily="@font/poppins"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tanggal Pengerjaan : 21-4-2022"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textSize="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nama : Arif Abdan Syakur"
        android:gravity="center"
        android:layout_marginTop="1dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textSize="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NIM : 10119085"
        android:gravity="center"
        android:layout_marginTop="1dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textSize="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kelas : IF3"
        android:gravity="center"
        android:layout_marginTop="1dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textSize="10dp"/>
</LinearLayout>